Adjust highlight due to fixed header tweaks overlapping

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -222,6 +222,7 @@ $docs-color: #246;
 // ClipboardJS
 .cf-clipboard {
     position: relative;
+    z-index: 2;
     display: block;
     float: right;
     line-height: 1;
@@ -417,6 +418,7 @@ h4 {
 
 // Highlight
 .highlight {
+    position: relative;
     margin-bottom: 1rem;
     color: #393939;
     background-color: #f8f8f8;
